tests/files/parser_tests/should_fail/057.cmdr
//Should not parse while loop
while (true)
    echo hi;
}